--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
